add new img and modif path img

--- a/index.html
+++ b/index.html
@@ -128,8 +128,6 @@
         j'ai configuré les adresses IP fixes, la passerelle, et défini le
         serveur lui-même comme serveur DNS pour l'ensemble du domaine.
       </p>
-      <p class="hover-zone">Voir la configuration IP et DNS</p>
-      <img src="AccesUser.png" alt="Configuration IP" class="hover-image" />
 
       <h2>2. Installation de l'Active Directory et promotion du serveur</h2>
       <p>
@@ -138,11 +136,7 @@
         <strong>marctech.fr</strong>.
       </p>
       <p class="hover-zone">Voir l'installation AD</p>
-      <img
-        src="AddDroitsFolder.png"
-        alt="Installation AD"
-        class="hover-image"
-      />
+      <img src="/img/instalAD.webp" alt="Installation AD" class="hover-image" />
 
       <h2>3. Création des OU et des utilisateurs</h2>
       <p>
@@ -151,7 +145,7 @@
         dans chaque service.
       </p>
       <p class="hover-zone">Voir la création des utilisateurs</p>
-      <img src="userAD.png" alt="Utilisateurs AD" class="hover-image" />
+      <img src="img/userAD.webp" alt="Utilisateurs AD" class="hover-image" />
 
       <h2>4. Ajout d'un disque supplémentaire pour les partages</h2>
       <p>
@@ -160,7 +154,7 @@
         <strong>Partages$</strong>.
       </p>
       <p class="hover-zone">Voir la gestion du disque</p>
-      <img src="newDisk.png" alt="Nouveau disque" class="hover-image" />
+      <img src="img/newDisk.webp" alt="Nouveau disque" class="hover-image" />
 
       <h2>5. Création des Groupes (GL et DL)</h2>
       <p>
@@ -168,8 +162,7 @@
         pour attribuer les permissions sur les ressources partagées.
       </p>
       <p class="hover-zone">Voir la création des groupes GL et DL</p>
-      <img src="creaDL.png" alt="Groupes DL" class="hover-image" />
-      <img src="CreationGL.png" alt="Groupes GL" class="hover-image" />
+      <img src="img/creaDL.webp" alt="Groupes DL" class="hover-image" />
 
       <h2>6. Mise en place des partages réseau</h2>
       <p>
@@ -191,7 +184,7 @@
       </p>
       <p class="hover-zone">Voir la configuration du partage</p>
       <img
-        src="AddPartageAvancé.png"
+        src="img/AddPartageAvancé.webp"
         alt="Partage avancé"
         class="hover-image"
       />
@@ -204,7 +197,7 @@
       </p>
       <p class="hover-zone">Voir l'attribution des droits</p>
       <img
-        src="AddDroitsUser.png"
+        src="img/AddDroitsUser.webp"
         alt="Droits utilisateurs"
         class="hover-image"
       />
@@ -217,7 +210,7 @@
       </p>
       <p class="hover-zone">Voir les tests utilisateurs</p>
       <img
-        src="NoAccessPermission.png"
+        src="img/AccesUser.webp"
         alt="Test utilisateurs"
         class="hover-image"
       />
