err on path slash

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       </p>
 
       <p class="hover-zone">Voir l'installation AD</p>
-      <img src="/img/instalAD.webp" alt="Installation AD" class="hover-image" />
+      <img src="img/instalAD.webp" alt="Installation AD" class="hover-image" />
 
       <h2>3. Création des OU et des utilisateurs</h2>
       <p>
